--- a/latex/header.tex
+++ b/latex/header.tex
@@ -1,3 +1,7 @@
+\usepackage{float}
+\usepackage{booktabs}
+\usepackage{colortbl}
+
 \usepackage{caption}
 \captionsetup{justification=raggedright,singlelinecheck=false}
 
